# munshort_ai_agent

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: index.py
data/sample/: anomalies.json  aspect_sentiments.json  brands_summary.json  filter_options.json  insights.json  products.json  reviews_analyzed.json  trust_signals.json  value_for_money.json
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/cards/: StatCard.tsx
frontend/src/components/charts/: AspectHeatmap.tsx  BrandScatterPlot.tsx  DiscountBarChart.tsx  PriceDistributionChart.tsx  SentimentBarChart.tsx  SentimentRadar.tsx
frontend/src/components/common/: Badge.tsx  LoadingSpinner.tsx
frontend/src/components/filters/: FilterBar.tsx
frontend/src/components/layout/: PageLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: BrandComparisonPage.tsx  InsightsPage.tsx  OverviewPage.tsx  ProductDrilldownPage.tsx
frontend/src/stores/: filterStore.ts
frontend/src/types/: index.ts
