[project]
name = "munshot-ai-agent"
version = "0.1.0"
description = "Competitive intelligence dashboard for luggage brands on Amazon India"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.135.3",
    "google-genai>=1.70.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
